Adds unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
 
-script: php application
+script: vendor/bin/phpunit --coverage-clover=coverage.xml
