--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,17 @@
         "illuminate/console": "5.4.*",
         "illuminate/events": "5.4.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "config": {
