Fixes travis build

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,3 +2,9 @@ checks:
     php:
         code_rating: true
         duplication: true
+
+build:
+    tests:
+        override:
+            -
+                command: 'vendor/bin/phpunit'
