Fixes tests checker

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,4 +7,7 @@ build:
     tests:
         override:
             -
-                command: 'vendor/bin/phpunit'
+                command: 'php vendor/bin/phpunit --coverage-clover=coverage.clover'
+                coverage:
+                    file: 'coverage.clover'
+                    format: 'clover'
