Adds composer bin

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,8 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "bin": [
+        "application"
+    ]
 }
