Adds install feature

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,11 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "scripts": {
+        "post-create-project-cmd": [
+            "php application install"
+        ]
+    },
     "bin": [
         "application"
     ]
