--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
-        "bvanhoekelen/performance": "dev-master"
+        "bvanhoekelen/performance": "~2.0"
     },
     "autoload": {
         "psr-4": {
