--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,7 @@
 * text=auto
 
-/tests export-ignore
 /.gitattributes export-ignore
-/.gitignore export-ignore
 /.travis.yml export-ignore
-/phpunit.xml.dist export-ignore
+/.scrutinizer.yml export-ignore
 /CONTRIBUTING.md export-ignore
 /CHANGELOG.md export-ignore
-/README.md export-ignore
