--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,20 @@
     ],
     "require": {
         "php": ">=7.1",
-        "nunomaduro/zero-framework": "~3.1"
+        "illuminate/database": "^5.4",
+        "nunomaduro/zero-framework": "dev-release-3.3.0"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../zero-framework",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require-dev": {
         "phpunit/phpunit": "~6.2"
     },
