--- a/composer.json
+++ b/composer.json
@@ -15,20 +15,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/database": "^5.4",
-        "nunomaduro/zero-framework": "dev-release-3.3.0"
+        "nunomaduro/zero-framework": "~4.0"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../zero-framework",
-            "options": {
-                "symlink": true
-            }
-        }
-    ],
     "require-dev": {
         "phpunit/phpunit": "~6.2"
     },
