--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "scripts": {
         "post-create-project-cmd": [
-            "php application rename"
+            "php application app:rename"
         ]
     },
     "bin": ["application"]
