--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel-zero/framework": "~3.3"
+        "laravel-zero/framework": "~3.5"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "~6.2"
+        "phpunit/phpunit": "~6.3"
     },
     "autoload": {
         "psr-4": {
