--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 /.gitattributes export-ignore
 /.travis.yml export-ignore
+/.styleci.yml export-ignore
 /.scrutinizer.yml export-ignore
 /CONTRIBUTING.md export-ignore
 /CHANGELOG.md export-ignore
