--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel-zero/framework": "dev-release-3.6.0"
+        "laravel-zero/framework": "~3.6"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
