--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel-zero/framework": "~3.6"
+        "laravel-zero/framework": "~3.7"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "~6.3"
+        "phpunit/phpunit": "~6.4",
+        "nunomaduro/collision": "^1.1"
     },
     "autoload": {
         "psr-4": {
