--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel-zero/framework": "dev-hotfix-3.7.1"
+        "laravel-zero/framework": "^3.7.1",
+        "nunomaduro/collision": "^1.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "~6.4",
-        "nunomaduro/collision": "^1.1"
+        "phpunit/phpunit": "~6.4"
     },
     "autoload": {
         "psr-4": {
