--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel-zero/framework": "dev-hotfix-4.0.12"
+        "laravel-zero/framework": "4.0.*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
