Adds backers to gitignore

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,6 @@
 /.travis.yml export-ignore
 /.styleci.yml export-ignore
 /.scrutinizer.yml export-ignore
+/BACKERS.md export-ignore
 /CONTRIBUTING.md export-ignore
 /CHANGELOG.md export-ignore
-/CREDITS.md export-ignore
