--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "laravel-zero/laravel-zero",
-    "description": "Laravel Zero provides the perfect starting point for your next Laravel Console Application.",
-    "keywords": ["framework", "laravel", "console", "zero"],
+    "description": "The Laravel Zero Framework.",
+    "keywords": ["framework", "laravel", "console", "zero", "cli"],
     "homepage": "http://laravel-zero.com",
+    "type": "project",
     "license": "MIT",
     "support": {
         "issues": "https://github.com/laravel-zero/laravel-zero/issues",
@@ -15,7 +16,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.1.3",
         "laravel-zero/framework": "dev-release-5.6.0"
     },
     "minimum-stability": "dev",
