--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "phpunit/phpunit": "~6.5"
+        "phpunit/phpunit": "~7.0",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "psr-4": {
