--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,8 @@
 * text=auto
-
-/.gitattributes export-ignore
-/.travis.yml export-ignore
-/.styleci.yml export-ignore
-/.scrutinizer.yml export-ignore
-/BACKERS.md export-ignore
-/CONTRIBUTING.md export-ignore
-/CHANGELOG.md export-ignore
+.gitattributes export-ignore
+.travis.yml export-ignore
+.styleci.yml export-ignore
+.scrutinizer.yml export-ignore
+BACKERS.md export-ignore
+CONTRIBUTING.md export-ignore
+CHANGELOG.md export-ignore
