--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "laravel-zero/framework": "dev-release-5.6.0"
+        "laravel-zero/framework": "5.6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
