--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "laravel-zero/framework": "5.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "symfony/thanks": "^1.0"
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "psr-4": {
