--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.6.*"
+        "laravel-zero/framework": "dev-develop"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1"
+        "phpunit/phpunit": "^7.2"
     },
     "autoload": {
         "psr-4": {
