--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,11 +3,21 @@ checks:
         code_rating: true
         duplication: true
 
+filter:
+    excluded_paths:
+        - tests/*
+
 build:
-    tests:
-        override:
-            -
-                command: 'php vendor/bin/phpunit --coverage-clover=coverage.clover'
-                coverage:
-                    file: 'coverage.clover'
-                    format: 'clover'
+    environment:
+        php:
+            version: '7.2'
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
+                    -
+                        command: 'vendor/bin/phpunit --coverage-clover=coverage.clover'
+                        coverage:
+                            file: 'coverage.clover'
+                            format: 'clover'
