--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel-zero/framework": "dev-develop"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.3"
     },
     "autoload": {
         "psr-4": {
