--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.7.*"
+        "laravel-zero/framework": "5.8.*-dev"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
@@ -36,10 +36,7 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true,
-        "platform": {
-            "ext-posix": "0"
-        }
+        "optimize-autoloader": true
     },
     "scripts": {
         "post-create-project-cmd": [
