--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.8.*-dev",
-        "padraic/phar-updater": "^1.0.6"
+        "laravel-zero/framework": "5.8.*-dev"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
