--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.8.*-dev"
+        "laravel-zero/framework": "5.8.*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.3"
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
