--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "laravel-zero/framework": "5.8.*"
+        "laravel-zero/framework": "5.8.* >= 5.8.4"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
