--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
-        "laravel-zero/framework": "5.8.* >= 5.8.4"
+        "php": "^7.2",
+        "laravel-zero/framework": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
