Fix reference to PHPUnit Printer for Collision

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,7 +17,7 @@
         </testsuite>
     </testsuites>
     <listeners>
-        <listener class="NunoMaduro\Collision\Adapters\Phpunit\Listener"/>
+        <listener class="NunoMaduro\Collision\Adapters\Phpunit\Printer"/>
     </listeners>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
