Fix duplicated Collision output in Artisan Test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,6 +7,7 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
+         printerClass="NunoMaduro\Collision\Adapters\Phpunit\Printer"
          stopOnFailure="false">
     <testsuites>
         <testsuite name="Feature">
@@ -16,9 +17,6 @@
             <directory suffix="Test.php">./tests/Unit</directory>
         </testsuite>
     </testsuites>
-    <listeners>
-        <listener class="NunoMaduro\Collision\Adapters\Phpunit\Printer"/>
-    </listeners>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./app</directory>
