added required php extension intl for using box

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
+        "ext-intl": "*",
         "laravel-zero/framework": "^8.4"
     },
     "require-dev": {
