--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,19 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "laravel-zero/framework": "^8.8"
+        "php": "^8.0",
+        "laravel-zero/framework": "^9.0",
+        "nunomaduro/termwind": "^1.3"
     },
     "require-dev": {
-        "mockery/mockery": "^1.4.3",
-        "pestphp/pest": "^1.20"
+        "mockery/mockery": "^1.4.4",
+        "pestphp/pest": "^1.21.1"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
@@ -36,7 +39,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
