--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,5 +35,8 @@ jobs:
     - name: Install Composer dependencies
       run: composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --ansi
 
+    - name: Style Testing
+      run: vendor/bin/pint --test
+
     - name: Unit Testing
       run: vendor/bin/pest --colors=always
