feat: uses `"minimum-stability": "stable"`

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
+    "minimum-stability": "stable",
     "bin": ["application"]
 }
