--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "laravel-zero/framework": "^10.4",
-        "nunomaduro/termwind": "^1.15.1"
+        "php": "^8.2",
+        "laravel-zero/framework": "^11"
     },
     "require-dev": {
         "laravel/pint": "^1.15.1",
