--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        php: ['8.1', '8.2', '8.3']
+        php: ['8.2', '8.3']
         dependency-version: [prefer-lowest, prefer-stable]
 
     name: PHP ${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
@@ -43,4 +43,4 @@ jobs:
       run: vendor/bin/pint --test --ansi
 
     - name: Unit Testing
-      run: vendor/bin/pest --colors=always
+      run: vendor/bin/pest
