Fixing a bug in testing with Laravel Prompts

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,4 +17,7 @@
             <directory>./app</directory>
         </include>
     </source>
+    <php>
+        <env name="APP_ENV" value="testing" />
+    </php>
 </phpunit>
