--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "bin": ["application"]
 }
