--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel-zero/framework": "^12.0"
+        "laravel-zero/framework": "^12.0.1"
     },
     "require-dev": {
-        "laravel/pint": "^1.22",
+        "laravel/pint": "^1.25.1",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^3.8.2"
+        "pestphp/pest": "^3.8.4|^4.1.2"
     },
     "autoload": {
         "psr-4": {
